--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,12 +6,48 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      
+      <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" routerLink="/jobs">Home <span class="sr-only">(current)</span></a>
           </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+               Rents
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Manage Rents</a>
+              <a class="dropdown-item" href="#">Unreturned Product Rents</a>
+            </div>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Products
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Manage Products</a>
+              <a class="dropdown-item" href="#">Average Product Rent by date</a>
+            </div>
+          </li>
+
+           <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Customers
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Manage Customer</a>
+              <a class="dropdown-item" href="#">Rent Customer History</a>
+            </div>
+          </li>
+
+         
+
+
           
           <!-- <li class="nav-item" >
             <a class="nav-link"  routerLink="/register">Sign Up <span class="sr-only">(current)</span></a>
