--- a/src/app/product/product-list.component.html
+++ b/src/app/product/product-list.component.html
@@ -28,7 +28,7 @@
             </tr>
         </tbody>
     </table>
-    <button class="btn btn-success" (click)="add()" >Save</button>
+    <button class="btn btn-success" (click)="add()" >Add product</button>
 </div>
 
 
