--- a/src/app/customer/create-customer.component.html
+++ b/src/app/customer/create-customer.component.html
@@ -25,7 +25,7 @@
 
       
         <div class="panel-footer">
-           <button class="btn btn-primary" (click)="save()">Save</button>    
+           <button class="btn btn-primary" (click)="save()">Add Customer</button>    
         </div>
  
       
