--- a/src/app/invoice/invoice-list.component.html
+++ b/src/app/invoice/invoice-list.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2>Manage Invoice</h2>
+    <h2>Manage Rents</h2>
     <p></p>
     <table class="table table-striped">
         <thead>
@@ -24,7 +24,7 @@
             </tr>
         </tbody>
     </table>
-    <button class="btn btn-success" (click)="add()" >Add invoice</button>
+    <button class="btn btn-success" (click)="add()" >Add Rents</button>
 </div>
 
 
